# internal/routers/api/v1/tag.go
@@ -15,9 +15,9 @@ func NewTag() Tag {
 // @Param state query int false "状态" Enums(0, 1) default(1)
 // @Param page query int false "页码"
 // @Param page_size query int false "每页数量"
-// @Success 200 {Object} model.Tag "成功"
-// @Failure 400 {Object} errcode.Error "请求错误"
-// @Failure 500 {Object} errcode.Error "服务错误"
+// @Success 200 {object} model.TagSwagger "成功"
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Failure 500 {object} errcode.Error "服务错误"
 // @Router /api/v1/tags [get]
 func (t Tag) List(c *gin.Context) {}
 
@@ -26,9 +26,9 @@ func (t Tag) List(c *gin.Context) {}
 // @Param name body string true "标签名称" minlength(3) maxlength(100)
 // @Param state body int false "状态" Enums(0, 1) default(1)
 // @Param created_by body string false "作者" minlength(3) maxlength(100)
-// @Success 200 {Object} model.Tag "成功"
-// @Failure 400 {Object} errcode.Error "请求错误"
-// @Failure 500 {Object} errcode.Error "服务错误"
+// @Success 200 {object} model.Tag "成功"
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Failure 500 {object} errcode.Error "服务错误"
 // @Router /api/v1/tags [post]
 func (t Tag) Create(c *gin.Context) {}
 
@@ -38,17 +38,17 @@ func (t Tag) Create(c *gin.Context) {}
 // @Param name body string false "标签名称" minlength(3) maxlength(100)
 // @Param state body int false "状态" Enums(0, 1) default(1)
 // @Param updated_by body string true "编辑" minlength(3) maxlength(100)
-// @Success 200 {Object} model.Tag "成功"
-// @Failure 400 {Object} errcode.Error "请求错误"
-// @Failure 500 {Object} errcode.Error "服务错误"
+// @Success 200 {object} model.Tag "成功"
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Failure 500 {object} errcode.Error "服务错误"
 // @Router /api/v1/tags/{id} [put]
 func (t Tag) Update(c *gin.Context) {}
 
 // @Summary 删除标签
 // @Produce json
 // @Param id path int true "标签ID"
-// @Success 200 {Object} model.Tag "成功"
-// @Failure 400 {Object} errcode.Error "请求错误"
-// @Failure 500 {Object} errcode.Error "服务错误"
+// @Success 200 {object} model.Tag "成功"
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Failure 500 {object} errcode.Error "服务错误"
 // @Router /api/v1/tags/{id} [delete]
 func (t Tag) Delete(c *gin.Context) {}
